menu spacing fixed

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: The Couples Collective
-Version: 0.48
+Version: 0.49
 Description: Updated site for the Bay Area Couples Collective
 Tags: private, static
 Author: Angel Damion Robles and CJ Garcia
@@ -205,7 +205,7 @@ body {
             align-items: center;
             column-gap: 16px;
             justify-content: space-between;
-            max-width: 297px;
+            max-width: 310px;
 
             & a {
                 text-decoration: none;
